--- a/scraper/.env
+++ b/scraper/.env
@@ -14,5 +14,5 @@ TRACE_ENABLED=false
 TRACE_PATH=tracing
 
 # Kafka
-BOOTSTRAP_SERVERS=localhost9094
+BOOTSTRAP_SERVERS=localhost:9094
 TOPIC_SCRAPED_ITEMS=scraped_items
