--- a/scraper/.env
+++ b/scraper/.env
@@ -8,9 +8,9 @@ VIEWPORT_HEIGHT=1080
 LOG_LEVEL=debug
 
 JOB_SOURCE=file
-JOB_FILE_PATH=job_params/search_params_subset.txt
+JOB_FILE_PATH=job_params/search_params_3.txt
 
-TRACE_ENABLED=false
+TRACE_ENABLED=False
 TRACE_PATH=tracing
 
 # Kafka
