--- a/scraper-js/package.json
+++ b/scraper-js/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@playwright/test": "^1.57.0",
     "async-sema": "^3.1.1",
-    "playwright": "^1.57.0"
+    "fast-json-stable-stringify": "^2.1.0",
+    "playwright": "^1.57.0",
+    "redis": "^5.10.0"
   }
 }
